fix: too large padding

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,7 +23,7 @@
   }
 
   body {
-    @apply overflow-x-hidden bg-background font-main [scrollbar-color:var(--primary)_var(--background)] [scrollbar-width:_thin];
+    @apply bg-background font-main [scrollbar-color:var(--primary)_var(--background)] [scrollbar-width:_thin];
   }
 
   ::-webkit-scrollbar {
